cabal-version: 3.0
name: bytetrie
version: 0.1.0.0
author: Eric Demko
maintainer: edemko@layer3com.com
copyright: 2020 Layer 3 Communications
category: Data
build-type: Simple
-- synopsis:
-- description:
-- bug-reports:
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    , Data.Trie.Word8
  -- other-modules:
  build-depends:
    , base >=4.12 && <5
    , bifunctors >=5
    , byte-containers
    , byteslice >=0.2.1
    , primitive >=0.7.0.0
    , small-bytearray-builder >=0.3
    , unpacked-maybe >=0.1
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , byte-containers
    , byteslice
    , bytetrie
    , primitive >=0.7
    , primitive-unlifted >=0.1.2
    , quickcheck-classes >=0.6.4
    , tasty
    , tasty-hunit >=0.10
    , tasty-quickcheck
    , unpacked-maybe >=0.1
  other-modules:
    , TestData
  hs-source-dirs: test, common
  default-language: Haskell2010
  ghc-options: -Werror -O2


benchmark bench
  type: exitcode-stdio-1.0
  build-depends:
    , base >=4.12 && <5
    , byteslice >=0.2.1
    , bytetrie
    , gauge >=0.2
    , primitive >=0.7
    , primitive-unlifted >=0.1.2
    , text >=1.2
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: bench, common
  main-is: Main.hs
  other-modules:
    TestData
