cabal-version:   3.0
name:            bytetrie
version:         0.1.0.1
author:          Eric Demko
maintainer:      amartin@layer3com.com
copyright:       2020 Layer 3 Communications
category:        Data
build-type:      Simple
synopsis:        Tries with Bytes as keys.
description:
  Tries with 'Bytes' (equiv. 'ByteArray') as keys. This implementation is
  optimized for performing queries rather than updating the structure
  repeatedly.

homepage:        https://github.com/byteverse/bytetrie
bug-reports:     https://github.com/byteverse/bytetrie/issues
license:         BSD-3-Clause
license-file:    LICENSE
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.8 || ==9.6.3 || ==9.8.1

common build-settings
  default-language: Haskell2010
  ghc-options:      -Wall -Wunused-packages

library
  import:          build-settings
  exposed-modules: Data.Trie.Word8
  build-depends:
    , base             >=4.12   && <5
    , byte-containers  >=0.1    && <0.2.0
    , bytebuild        >=0.3.16 && <0.4
    , byteslice        >=0.2.13 && <0.3
    , primitive        >=0.7    && <0.10
    , unpacked-maybe   >=0.1.0  && <0.2

  hs-source-dirs:  src
  ghc-options:     -O2

test-suite test
  import:         build-settings
  main-is:        Main.hs
  type:           exitcode-stdio-1.0
  build-depends:
    , base                >=4.12   && <5
    , byteslice           >=0.2.13 && <0.3
    , bytetrie
    , quickcheck-classes  >=0.6.4
    , tasty
    , tasty-hunit         >=0.10
    , tasty-quickcheck

  other-modules:  TestData
  hs-source-dirs: test common

source-repository head
  type:     git
  location: git://github.com/byteverse/bytetrie.git
